--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -31,7 +31,12 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    
+    <!-- add cript of MudBlazor -->
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+   
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
+
+
