--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -24,6 +24,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="products">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Products
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/products/list">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> ProductsList
+            </NavLink>
+        </div>
     </nav>
 </div>
 
