--- a/_Imports.razor
+++ b/_Imports.razor
@@ -9,4 +9,6 @@
 @using mudblazor_augcenter
 @using mudblazor_augcenter.Shared
 @using MudBlazor
+@using Blazored.TextEditor
 @using mudblazor_augcenter.Models
+@using WYSIWYGTextEditor
