--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -15,7 +15,11 @@
     <!--add MudBlazor in projects -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    
+
+    <!--add quilljs WYSIWYGTextEditor: https://github.com/somegenericdev/WYSIWYGTextEditor -->
+    <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+    <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -35,6 +39,11 @@
     <!-- add cript of MudBlazor -->
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
    
+    <!--add quilljs WYSIWYGTextEditor: https://github.com/somegenericdev/WYSIWYGTextEditor -->
+    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="_content/WYSIWYGTextEditor/quill-blot-formatter.min.js"></script>
+    <script src="_content/WYSIWYGTextEditor/BlazorQuill.js"></script>
+
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
