--- a/Pages/ProductPost.razor
+++ b/Pages/ProductPost.razor
@@ -1,4 +1,4 @@
-@page "/product/post"
+@page "/products/post"
 @inherits ProductPostBase
 
     <EditForm Model="@productPost" OnValidSubmit="OnValidSubmit">
