add image, script.js, size cache

--- a/_Imports.razor
+++ b/_Imports.razor
@@ -11,4 +11,5 @@
 @using MudBlazor
 @using Blazored.TextEditor
 @using mudblazor_augcenter.Models
+@using mudblazor_augcenter.Data
 @using WYSIWYGTextEditor
