--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -43,7 +43,8 @@
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="_content/WYSIWYGTextEditor/quill-blot-formatter.min.js"></script>
     <script src="_content/WYSIWYGTextEditor/BlazorQuill.js"></script>
-
+    
+    <script src="scripts.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
